# educacion_trabajo_desarrollo_humano_colombia

./: pyproject.toml
Documents/MINE/Semestre II/Seminario de Programacion/: .gitignore  APIS.docx  Ambientes - Primera Clase.txt  Crear repositorio.docx  Error en Código R.html
Documents/MINE/Semestre II/Seminario de Programacion/Git2/: Tutorial_ Instalación local de Git.html  Tutorial_ Operaciones básicas en un repositorio local8.html
Documents/MINE/Semestre II/Seminario de Programacion/Proyecto_Final_DJSC_23-08-2024/: Regresion_Logistica_1.py  Untitled-1.py
Documents/MINE/Semestre II/Seminario de Programacion/Video/v2/: Seminario de Programación - Lists.html
Documents/MINE/Semestre II/Seminario de Programacion/educacion_para_el_trabajo_y_desarrollo_humano_colombia/: modelo_ml.py
Documents/MINE/Semestre II/Seminario de Programacion/educacion_trabajo_desarrollo_humano_colombia/: .gitignore  LICENSE  README.md  contenido_local.txt  pyproject.toml
Documents/MINE/Semestre II/Seminario de Programacion/educacion_trabajo_desarrollo_humano_colombia/src/: app.py  app.py.txt
Documents/MINE/Semestre II/Seminario de Programacion/educacion_trabajo_desarrollo_humano_colombia/src/api/: main.py
Documents/MINE/Semestre II/Seminario de Programacion/educacion_trabajo_desarrollo_humano_colombia/src/models/: modelo_regresion.py
Documents/MINE/Semestre II/Seminario de Programacion/educacion_trabajo_desarrollo_humano_colombia/src/pipeline/: ejecutar_modelo.py
