[tool.poetry]
name = "djsol"
version = "0.1.0"
description = "La Educación para el Trabajo y Desarrollo Humano ETDH es una opción para muchos Colombianos que buscan trabajo, mejorar sus competencias y condiciones de vida. Se caracteriza por su enfoque práctico y de corta duración, de acuerdo con el MEN, se ofertan más de 21,000 programas en áreas técnicas y laborales en 4,385 instituciones en el país. En menos de tres años, aumentó el número de instituciones en 288."
authors = ["Dj_Soler <johannasolermine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.39.0"
pandas = "^2.2.3"
requests = "^2.32.3"
sodapy = "^2.2.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
plotis = "^0.1.9"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
