[tool.poetry]
package-mode = false
name = "educacion_trabajo_desarrollo_humano_colombia"
version = "0.1.0"
description = "La Educación para el Trabajo y Desarrollo Humano ETDH es una opción para muchos Colombianos que buscan trabajo, mejorar sus competencias y condiciones de vida. Se caracteriza por su enfoque práctico y de corta duración, de acuerdo con el MEN, se ofertan más de 21,000 programas en áreas técnicas y laborales en 4,385 instituciones en el país. En menos de tres años, aumentó el número de instituciones en 288."
authors = ["Johanna Soler <johannasolermine@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.2"
scipy = "^1.11.4"
streamlit = "^1.37.1"
pandas = "^2.2.2"
requests = "^2.32.3"
sodapy = "^2.0.0"
matplotlib = "^3.5.0"
seaborn = "^0.13.2"
plotis = "^0.1.9"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
